app/javascript/flavours/aether/styles/components/columns.scss
/* ... */
.right_column {
  .account-card:nth-child(n + 4) {
    display: none;
  }

  .trends__item:nth-child(n + 6) {
    display: none;
  }

  .account-card {
    margin-top: 15px;
  }

  .account-card:first-child {
    margin-top: 0;
  }
}

.ui__header__left {
  display: inline-flex;
  align-items: center;
  padding-left: 10px;
}

.ui__header__links .icon-button {
  padding: 8px;
  box-sizing: content-box;
}

.ui__header__links {
  .button {
    i {
      font-size: 1.4rem;
      margin-left: 6px;
      vertical-align: middle;
    }
  }
}

.ui__header__left .column-link i {
  display: none;
}

.ui__header__left .column-link {
  font-size: 16px;
  line-height: 1;
  font-weight: bold;
}

.wordmark {
  img {
    display: none;
    height: 46px !important;
    width: auto !important;
  }
}

.wordmark_dark {
  img {
    display: inherit;
    height: 46px !important;
    width: auto !important;
  }
}

.logo-container-light {
  display: none;
}

.logo-container-dark {
  display: inherit;
}

.ui__header__left {
  .column-link {
    display: block;
    font-size: 16px;
    padding: 15px;
    text-decoration: none;
    overflow: hidden;
    white-space: nowrap;
    color: var(--ui-font-color);
    opacity: 0.8;
    transition: opacity 0.2s;

    &:hover {
      opacity: 1;
    }

    &.active {
      color: var(--ui-highlight-color);
      opacity: 1;
    }
  }
}

.ui__header__links {
  .icon-button {
    color: var(--ui-highlight-color);

    &:hover {
      color: var(--ui-font-color);
      background: transparent;
    }
  }

  .column-link {
    font-size: 1.6rem !important;
    line-height: 1 !important;
    padding: 0 !important;
    padding-right: 15px !important;
    overflow: visible;
    color: transparent;

    @media screen and (prefers-reduced-motion: no-preference) {
      & {
        transition:
          color 0.2s,
          background 0.2s,
          -webkit-text-stroke 0.2s;
      }
    }

    .fa {
      -webkit-text-stroke: 1.8px var(--ui-highlight-color);

      &:hover {
        -webkit-text-stroke: 1.8px var(--ui-font-color);
      }
    }

    &.active {
      color: var(--ui-highlight-color);
      -webkit-text-stroke: 0 transparent;

      i {
        -webkit-text-stroke: 0 transparent;
      }
    }

    span {
      display: none;
    }
  }

  .icon-with-badge__badge {
    margin-top: 5px;
    -webkit-text-stroke: 0;
    color: var(--ui-highlight-button-text-color);
  }

  @media screen and (min-width: $no-gap-breakpoint) {
    .button {
      margin-right: 15px !important;
    }
  }
}

.right_column {
  .explore__tags-header {
    margin-top: 0;
  }

  .account-card {
    padding-bottom: 5px;
  }

  .account-card__actions {
    display: none;
  }

  .account-card__header {
    height: 10px;

    img {
      display: none;
    }
  }
}

@media screen and (max-width: $widescreen-breakpoint) {
  .right_column .explore__suggested-header {
    display: none;
  }
}

h1#Misc {
  margin-bottom: 0;
  margin-left: 25px;
}

.getting-started__wrapper {
  .column-link {
    background: var(--ui-base-color);
    color: var(--ui-font-color);
    display: block;
    font-size: 16px;
    padding: 15px;
    text-decoration: none;
    overflow: hidden;
    white-space: nowrap;

    &:hover,
    &:focus,
    &:active {
      background: var(--ui-base-lighter-color);
    }

    &:focus {
      outline: 0;
    }

    &--transparent {
      background: transparent;
      color: $ui-secondary-color;

      &:hover,
      &:focus,
      &:active {
        background: transparent;
        color: var(--ui-font-color);
      }

      &.active {
        color: var(--ui-font-color);
      }
    }

    &--logo {
      background: transparent;
      padding: 10px;

      &:hover,
      &:focus,
      &:active {
        background: transparent;
      }
    }
  }
}

.list-panel .column-link {
  @media screen and (prefers-reduced-motion: no-preference) {
    & {
      transition:
        color 0.2s,
        background 0.2s,
        -webkit-text-stroke 0.2s;
    }
  }
}

